portfolio casi full

--- a/index2.html
+++ b/index2.html
@@ -27,12 +27,14 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <link href="css/ihover.css" rel="stylesheet">
 
 </head>
 
 <body>
     <!-- Inserta tu codigo aqui -->
-    <section id="service" class="text-center">
+    <section id="service" class="text-center" >
+
         <h3>SERVICIOS</h3>
         <hr>
         <div class="row items">
@@ -58,34 +60,91 @@
             </div>
         </div>
     </section>
-    <section id="portfolio" class="container-fluid">
-        <div class="row ">
-            <div class="col-md-4 primero"></div>
-            <div class="col-md-4 segundo"></div>
-            <div class="col-md-4 tercero">
-                <div class="sombra text-center">
-                    <div class="centro">
-                    <span>CATEGORIA</span>
-                    <p>Nombre proyecto</p>
+
+    <section id="portfolio" >
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-4 caja">
+                    <div class="ih-item square effect13 top_to_bottom"><a href="#">
+                    <div class="img"><img src="img/portfolio/1.jpg"></div>
+                    <div class="info">
+                        <h3>Heading here</h3>
+                        <p>Description goes here</p>
                     </div>
+                    </a></div>
+                </div>
+                <div class="col-md-4 caja">
+                    <div class="ih-item square colored effect13 left_to_right"><a href="#">
+                    <div class="img"><img src="img/portfolio/2.jpg"></div>
+                    <div class="info">
+                        <h3>Heading here</h3>
+                        <p>Description goes here</p>
+                    </div>
+                    </a></div>
+                </div>
+                <div class="col-md-4 caja ">
+                    <div class="sombra">
+                        <div class="ih-item square effect13 top_to_bottom">
+                            <a  href="#">
+                                <div class="img"><img class="imagen" src="img/portfolio/3.jpg"></div>
+                                <div class="info hid">
+                                    <h3>Heading here</h3>
+                                    <p>Description goes here</p>
+                                </div>
+                            </a>
+                        </div>
+                            <div class=" centro text-center">
+                                <span>CATEGORIA</span>
+                                <p>Nombre proyecto</p>
+                            </div>
+                     </div>   
+                </div>
                 </div>
             </div>
         </div>
-        <div class="row ">
-            <div class="col-md-4 cuarto"></div>
-            <div class="col-md-4 quinto"></div>
-            <div class="col-md-4 sexto">
-                <div class="sombra text-center">
-                    <div class="centro">
-                    <span>CATEGORIA</span>
-                    <p>Nombre proyecto</p>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-4 caja">
+                    <div class="ih-item square effect13 top_to_bottom"><a href="#">
+                    <div class="img"><img src="img/portfolio/4.jpg"></div>
+                    <div class="info">
+                        <h3>Heading here</h3>
+                        <p>Description goes here</p>
                     </div>
+                    </a></div>
+                </div>
+                <div class="col-md-4 caja">
+                    <div class="ih-item square colored effect13 left_to_right"><a href="#">
+                    <div class="img"><img src="img/portfolio/5.jpg"></div>
+                    <div class="info">
+                        <h3>Heading here</h3>
+                        <p>Description goes here</p>
+                    </div>
+                    </a></div>
+                </div>
+                <div class="col-md-4 caja ">
+                    <div class="sombra">
+                        <div class="ih-item square effect13 top_to_bottom">
+                            <a  href="#">
+                                <div class="img"><img class="imagen" src="img/portfolio/6.jpg"></div>
+                                <div class="info hid">
+                                    <h3>Heading here</h3>
+                                    <p>Description goes here</p>
+                                </div>
+                            </a>
+                        </div>
+                            <div class=" centro text-center">
+                                <span>CATEGORIA</span>
+                                <p>Nombre proyecto</p>
+                            </div>
+                     </div>   
+                </div>
                 </div>
             </div>
-        </div>
+        <div>
     </section>
 
-    <section id="github" class="text-center">
+   <section id="github" class="text-center">
         <p>Si quieres saber más de mi proyecto revisa mi github</p>
         <a href="#">VER MI GITHUB!</a>
     </section>
