--- a/index2.html
+++ b/index2.html
@@ -74,7 +74,7 @@
                     </a></div>
                 </div>
                 <div class="col-md-4 caja">
-                    <div class="ih-item square colored effect13 left_to_right"><a href="#">
+                    <div class="ih-item square effect13 left_to_right"><a href="#">
                     <div class="img"><img src="img/portfolio/2.jpg"></div>
                     <div class="info">
                         <h3>Heading here</h3>
@@ -105,7 +105,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-4 caja">
-                    <div class="ih-item square effect13 top_to_bottom"><a href="#">
+                    <div class="ih-item square effect13 left_to_right"><a href="#">
                     <div class="img"><img src="img/portfolio/4.jpg"></div>
                     <div class="info">
                         <h3>Heading here</h3>
@@ -114,7 +114,7 @@
                     </a></div>
                 </div>
                 <div class="col-md-4 caja">
-                    <div class="ih-item square colored effect13 left_to_right"><a href="#">
+                    <div class="ih-item square effect13 top_to_bottom"><a href="#">
                     <div class="img"><img src="img/portfolio/5.jpg"></div>
                     <div class="info">
                         <h3>Heading here</h3>
@@ -124,7 +124,7 @@
                 </div>
                 <div class="col-md-4 caja ">
                     <div class="sombra">
-                        <div class="ih-item square effect13 top_to_bottom">
+                        <div class="ih-item square effect13 left_to_right">
                             <a  href="#">
                                 <div class="img"><img class="imagen" src="img/portfolio/6.jpg"></div>
                                 <div class="info hid">
