--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                     </a></div>
                 </div>
                 <div class="col-md-4 caja">
-                    <div class="ih-item square colored effect13 left_to_right"><a href="#">
+                    <div class="ih-item square effect13 left_to_right"><a href="#">
                     <div class="img"><img src="img/portfolio/2.jpg"></div>
                     <div class="info">
                         <h3>Heading here</h3>
@@ -149,7 +149,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-4 caja">
-                    <div class="ih-item square effect13 top_to_bottom"><a href="#">
+                    <div class="ih-item square effect13 left_to_right"><a href="#">
                     <div class="img"><img src="img/portfolio/4.jpg"></div>
                     <div class="info">
                         <h3>Heading here</h3>
@@ -158,7 +158,7 @@
                     </a></div>
                 </div>
                 <div class="col-md-4 caja">
-                    <div class="ih-item square colored effect13 left_to_right"><a href="#">
+                    <div class="ih-item square effect13 top_to_bottom"><a href="#">
                     <div class="img"><img src="img/portfolio/5.jpg"></div>
                     <div class="info">
                         <h3>Heading here</h3>
